--- a/css2.css
+++ b/css2.css
@@ -49,7 +49,7 @@ p{
   margin: 0px;
 }
 .thongke2{
-  color: palevioletred;
+  color: blue;
   border-bottom: 2px solid yellow;
   margin-left: 2%;
   margin-right: 2%;
